<resources>
    <string name="app_name">ChinesePinyin</string>

    <string name="nav_bottom_main_learn">Learn</string>
    <string name="nav_bottom_main_discovery">Discovery</string>
    <string name="nav_bottom_main_immerse">Immerse</string>
    <string name="nav_bottom_main_user">User</string>

    <!--    LearningFragment界面的字符串-->
    <string name="learning_fragment_learning_day">Total Learning:\n%d Days</string>
    <string name="learning_fragment_daily">Daily</string>
    <string name="learning_fragment_daily_goal">Daily Goal</string>
    <string name="learning_fragment_progress">%d / %d XP</string>
    <string name="learning_fragment_practice">Practice</string>

    <!--    UserFragment界面的字符串-->
    <string name="user_fragment_days_learning">%d\nDays Learning</string>
    <string name="user_fragment_total_xp">%dXP\nTotal XP</string>
    <string name="user_fragment_daily_goal">Daily Goal</string>
    <string name="user_fragment_lesson">Lesson</string>
    <string name="user_fragment_reminder">Reminder</string>
    <string name="user_fragment_history_lesson">History Lesson</string>
    <string name="user_fragment_change_password">Password</string>
    <string name="user_fragment_log_out">Log Out</string>

    <!--    DetailFragment界面的字符串-->
    <string name="detail_fragment_next">Next</string>

    <!-- LoginFragment界面的字符串 -->
    <string name="login_fragment_welcome">Welcome</string>
    <string name="login_fragment_username">username</string>
    <string name="login_fragment_password">password</string>
    <string name="login_fragment_forget_password">Forget Password?</string>
    <string name="login_fragment_tap_here">Tap here</string>
    <string name="login_fragment_login">LOGIN</string>
    <string name="login_fragment_sign_in">SIGN IN</string>

    <!-- RegisterFragment界面的字符串 -->
    <string name="register_fragment_register">Register</string>
    <string name="register_fragment_login">Login</string>
    <string name="register_fragment_username">Please input your username</string>
    <string name="register_fragment_password">Please input your password</string>
    <string name="register_fragment_password_confirm">Confirm your password</string>
    <string name="register_fragment_username_not_null">Username can\'t be empty</string>
    <string name="register_fragment_password_not_null">Password can\'t be empty</string>
    <string name="register_fragment_password_is_incorrect">The password is incorrect</string>
    <string name="register_fragment_password_no_space">The password can\'t not contains space</string>
    <string name="register_fragment_password_length">At least 6 characters and less than 12</string>

    <!-- ProfileFragment界面的字符串 -->
    <string name="profile_fragment_text">You are not login, choose</string>
    <string name="profile_fragment_login">LOGIN</string>
    <string name="profile_fragment_sign_in">SIGN IN</string>

    <!-- DailyGoalSettingActivity界面的字符串 -->
    <string name="daily_goal_setting_edit_goal">Edit goal</string>
    <string name="daily_goal_setting_save">Save</string>
    <string name="daily_goal_setting_casual">Casual\u0020\u0020\u0020\u002010 XP a day</string>
    <string name="daily_goal_setting_regular">Regular\u0020\u0020\u002020 XP a day</string>
    <string name="daily_goal_setting_serious">Serious\u0020\u0020\u002030 XP a day</string>
    <string name="daily_goal_setting_insane">Insane\u0020\u0020\u0020\u002050 XP a day</string>

    <!-- PasswordSettingActivity界面的字符串 -->
    <string name="password_setting_password">Password</string>
    <string name="password_setting_old_password">Old password</string>
    <string name="password_setting_new_password">New password</string>
    <string name="password_setting_confirm">Confirm password</string>
    <string name="password_setting_submit">Submit</string>

    <!-- ReminderSettingActivity界面的字符串 -->
    <string name="reminder_setting_submit">Submit</string>
    <string name="reminder_setting_cancel">Cancel</string>

</resources>
