<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/daily_goal_setting_edit_goal"
            android:textSize="24sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/daily_goal_setting_save"
            android:textAlignment="center"
            android:textColor="@color/royalblue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gainsboro"
        android:orientation="vertical"
        >

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            >


            <RadioButton
                android:id="@+id/casual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_goal_setting_casual"
                android:textSize="18sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                />

            <RadioButton
                android:id="@+id/regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daily_goal_setting_regular"
                android:textSize="18sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                />

            <RadioButton
                android:id="@+id/serious"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daily_goal_setting_serious"
                android:textSize="18sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                />

            <RadioButton
                android:id="@+id/insane"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daily_goal_setting_insane"
                android:textSize="18sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                />

        </RadioGroup>

    </LinearLayout>


</LinearLayout>