<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    >

<!--布局参考：https://blog.csdn.net/qq_25066049/article/details/82843859-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="@color/loginTextView"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/login_fragment_welcome"
                tools:text="Welcome"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="@color/loginEdit"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:textColorHint="@color/gray"
                android:hint="@string/login_fragment_username"
                />
            <View
                style="@style/Separator"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@null"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:textColorHint="@color/gray"
                android:hint="@string/login_fragment_password"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/loginTextView"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/login_fragment_forget_password"
                tools:text="Forget Password?"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/login_fragment_tap_here"
                tools:text="Tap Here"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/login_fragment_login"
                android:background="@drawable/button_style"
                tools:text="LOGIN"
                />

            <Button
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:text="@string/login_fragment_sign_in"
                android:background="@drawable/button_style"
                tools:text="SIGN IN"
                />

        </LinearLayout>

    </LinearLayout>




</LinearLayout>