<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".ui.main.user.ProfileFragment">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/profile_fragment_text"
        android:typeface="serif"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        android:text="@string/profile_fragment_login"
        android:background="@drawable/button_style"
        />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        android:text="@string/profile_fragment_sign_in"
        android:background="@drawable/button_style"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Login with google, wechat, facebook"
        />


</LinearLayout>